# MLOPs-Lab3

./: .dockerignore  .gitignore  .pylintrc  DEPLOY_WITH_RELEASES.md  Dockerfile  MODEL_SOLUTION.md  Makefile  NEXT_STEPS.md  README.md  SIMPLE_DEPLOY.md  app.py  model.onnx  pyproject.toml  requirements.txt
.github/workflows/: cicd.yml  docker-build.yml
api/: api.py
mylib/: __init__.py  dataset.py  image_classificator.py  onnx_classifier.py
scripts/: download_data.py  select_best_model.py  train.py
tests/: test_api.py  test_cli.py  test_logic.py  test_model_artifacts.py
