[project]
name = "mlops-lab3-transfer-learning"
version = "0.1.0"
description = "MLOps Lab 3 - Transfer Learning with MLflow Experiment Tracking"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "black>=25.9.0",
    "click>=8.3.0",
    "fastapi>=0.119.1",
    "httpx>=0.28.1",
    "jinja2>=3.1.6",
    "pillow>=12.0.0",
    "pylint>=4.0.2",
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
    "python-multipart>=0.0.20",
    "uvicorn>=0.38.0",
    "torch>=2.5.0",
    "torchvision>=0.20.0",
    "mlflow>=2.18.0",
    "onnx>=1.17.0",
    "onnxruntime>=1.20.0",
    "onnxscript>=0.1.0",
    "matplotlib>=3.9.0",
    "numpy>=2.0.0",
]
